--- a/src/view/index.html
+++ b/src/view/index.html
@@ -30,7 +30,7 @@
                                 <input type="checkbox" name="filtro2" id="filtro2">
                                 <label for="filtro2">Filtrar contas com saldo maior que:</label>
                             </div>
-                            <input type="number">
+                            <input type="number" name="valor">
                         </div>
 
                         <button type="submit">Aplicar</button>
