--- a/src/view/style.css
+++ b/src/view/style.css
@@ -229,10 +229,11 @@ footer{
     justify-content: center;
 }
 
-#alterar-tema, #sair-conta{
+#alterar-tema, #sair-conta, #total-contas{
     position: absolute;
     top: 20px;
     right: 20px;
+    z-index: 1;
 }
 #deletar-conta{
     position: absolute;
