--- a/src/view/style.css
+++ b/src/view/style.css
@@ -224,17 +224,13 @@ footer{
     justify-content: center;
 }
 
-#alterar-tema, #sair-conta, #total-contas{
+#alterar-tema, #total-contas{
     position: absolute;
     top: 20px;
     right: 20px;
     z-index: 1;
 }
-#deletar-conta{
-    position: absolute;
-    top: 20px;
-    right: 80px;
-}
+
 .btn-menu-conta{
     position: relative;
     top: 20px;
@@ -264,4 +260,50 @@ footer{
 .btn-services-active{
     color: var(--background);
     background-color: var(--color);
+}
+
+.title-section{
+    display: flex;
+    justify-content: center;
+}
+
+.registros-list{
+    width: 100%;
+    height: 280px;
+    max-height: 280px;
+    overflow-y: auto;
+    li{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        border: 2px solid var(--color);
+        padding: 5px 10px;
+        border-radius: 10px;
+    }
+    table{
+        width: 100%;
+        height: 100%;
+        border: 2px solid gray;
+        border-collapse: collapse;
+        /* padding: 8px; */
+        border-radius: 15px;
+        th, td{
+            border: 2px solid gray;
+            max-height: 20px;
+            text-align: center;
+        }
+        th{
+            color: gray;
+        }
+    }
+}
+
+.gerar-regsitro-section{
+    width: 100%;
+    height: 60px;
+    position: absolute;
+    bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
