--- a/src/view/style.css
+++ b/src/view/style.css
@@ -282,14 +282,14 @@ footer{
     }
     table{
         width: 100%;
-        height: 100%;
+        /* height: 100%; */
         border: 2px solid gray;
         border-collapse: collapse;
         /* padding: 8px; */
         border-radius: 15px;
         th, td{
             border: 2px solid gray;
-            max-height: 20px;
+            height: 20px;
             text-align: center;
         }
         th{
